src/test/compile-fail/issue-18252.rs
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

enum Foo {
    Variant { x: usize }
}

fn main() {
    let f = Foo::Variant(42us); //~ ERROR uses it like a function
}
